test/spec/f32.load64.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/f32.load64.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
out/third_party/testsuite/f32.load64.fail.wast:1:52: unexpected token "f32.load64"
(module (memory 1) (func (param i32) (result f32) (f32.load64 (get_local 0))))
                                                   ^^^^^^^^^^
out/third_party/testsuite/f32.load64.fail.wast:1:63: syntax error, unexpected (
(module (memory 1) (func (param i32) (result f32) (f32.load64 (get_local 0))))
                                                              ^

;;; STDERR ;;)
